# diagramik

./: .gitignore  .pre-commit-config.yaml  .talismanrc  .yamlfmt.yml  IMPLEMENTATION_REPORT_DSPY_AGENT.md  Taskfile.yml  plan-on-agent-definition.md
backend/: .dockerignore  .gitignore  AGENT_IMPLEMENTATION_SUMMARY.md  BACKEND_TASKFILE_SETUP.md  IMPLEMENTATION_FILES.md  Taskfile.yml  _docker-service.taskfile.yml  openapi-schema.yml  pyproject.toml  pytest.ini
backend/agent/: .gitignore  COMPLETE_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  Taskfile.yml  pyproject.toml  test_agent_simple.py  verify_dspy_agent.py
backend/agent/config/: fastagent.config.yaml  lm_providers.yaml
backend/agent/data/style_guides/: python_diagrams.md
backend/agent/docs/: OTEL_SETUP.md
backend/agent/src/agent/: __init__.py  agent.py  cloudrun_auth.py  config.py  exceptions.py  telemetry.py  utils.py
backend/agent/tests/: test_agent_api.py  test_dspy_agent.py
backend/agent/tests/unit/: test_validators.py
backend/django_monolith/: .coverage  Dockerfile  entrypoint.sh  fastagent.jsonl  pytest.ini
backend/django_monolith/backend/: urls.py
backend/django_monolith/backend/deployed_settings/: database_conf.py  gcp_h2c_conf.py
backend/django_monolith/backend/settings/: __init__.py  app_conf.py  auth_conf.py  common_conf.py  cors_conf.py  database_conf.py  logging_conf.py  mail_send_conf.py  media_files_conf.py  rest_framework_conf.py  static_files_conf.py
backend/django_monolith/diagrams_assistant/: admin.py  apps.py  auth_views.py  fastagent.jsonl  models.py  serializers.py  throttles.py  urls.py  views.py
backend/django_monolith/diagrams_assistant/agent/: agent.py  diagram_generator.md  fastagent.config.yaml  fastagent.jsonl
backend/django_monolith/diagrams_assistant/migrations/: 0001_initial.py  0002_rename_file_uri_diagramversion_image_url.py  0003_alter_diagram_created_at_and_more.py  0004_rename_image_url_diagramversion_image_uri_and_more.py  0005_diagram_agent_history.py  0006_userquota_diagramgenerationlog.py  0007_alter_userquota_user.py  0008_alter_userquota_user.py  0009_remove_diagramgenerationlog_diagrams_as_user_id_031df4_idx_and_more.py
backend/django_monolith/django_emaillabs_sendmail/: apps.py  backend.py
backend/django_monolith/quota_management/: __init__.py  admin.py  apps.py  models.py  signals.py  throttles.py
backend/django_monolith/quota_management/migrations/: 0001_initial.py
backend/django_monolith/site_settings/: admin.py  models.py
backend/django_monolith/tests/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  conftest.py  factories.py
backend/django_monolith/user_auth/: admin.py  models.py  urls.py  utils.py
backend/mcp_diagrams/: .coverage  Dockerfile  available_node_names.txt  available_nodes.py  draw_diagram.py  draw_mermaid.py  move_file_to_gcs.py  pytest.ini  server.py
backend/mcp_diagrams/tests/: README.md  __init__.py  conftest.py
frontend/: README.md  (+4 more)
(+155 files in other folders)
