[project]
name = "text-diagrams-agent"
version = "0.1.0"
description = "Hybrid DSPy + FastAgent diagram generation agent"
requires-python = ">=3.13"
authors = [
    { name = "Text Diagrams Team" }
]

dependencies = [
    "dspy>=2.5.0",
    "fast-agent-mcp>=0.4.39",
    "nest-asyncio>=1.6.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests that require MCP server connection (deselect with '-k \"not integration\"')",
]
